fixed item title overflow
fixed item-title overflowing on border by removing white-space rule

--- a/css/quickref.css
+++ b/css/quickref.css
@@ -100,7 +100,6 @@
     font-size: inherit;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
 }
 
 .item-desc {
